# sprout-mobile

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  release-please-config.json  uniffi-bindgen.rs
.github/workflows/: android-dev-apk.yml  android.yml  ci.yml  ios-testflight.yml  release-please.yml  release.yml
android/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/video/divine/sprout/mobile/sample/: MainActivity.kt
android/sproutmobile/: build.gradle.kts  consumer-rules.pro  proguard-rules.pro
android/sproutmobile/src/main/java/: .gitkeep
android/sproutmobile/src/main/jniLibs/: .gitkeep
ios/: .gitignore  Package.swift
ios/App/: project.yml
ios/App/Sources/: App.swift  Info.plist
ios/Sources/SproutMobile/: SproutMobile.swift  sprout_mobile.swift  sprout_mobileFFI.h  sprout_mobileFFI.modulemap
ios/Tests/SproutMobileTests/: SproutMobileTests.swift
src/: converters.rs  error.rs  lib.rs  relay_protocol.rs  runtime.rs  types.rs
src/auth/: keys.rs  mod.rs  nip42.rs  nip98.rs  token.rs
src/http/: channels.rs  dms.rs  feed.rs  media.rs  messages.rs  mod.rs  presence.rs  search.rs  users.rs
src/store/: channels.rs  messages.rs  mod.rs  profiles.rs  schema.rs
src/ws/: mod.rs  protocol.rs  subscription.rs
