[package]
name = "sprout-mobile"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/rabble-claw/sprout-mobile"
description = "UniFFI-exposed Rust core for Sprout iOS and Android apps"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "sprout_mobile"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
sprout-core = { git = "https://github.com/block/sprout", package = "sprout-core", rev = "463d6d26d7a7d6a28a7f043f7dfc2f084f005bd0" }
sprout-sdk  = { git = "https://github.com/block/sprout", package = "sprout-sdk", rev = "463d6d26d7a7d6a28a7f043f7dfc2f084f005bd0" }

uniffi = { version = "0.29", features = ["cli"] }
nostr = { version = "0.36" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal", "process"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2"
hex = "0.4"
tracing = "0.1"
urlencoding = "2"

[build-dependencies]
uniffi = { version = "0.29", features = ["build", "cli"] }
